Closed Bug 427985 Opened 17 years ago Closed 17 years ago

Mozilla stops repainting in this testcase after a while

Categories

(Core :: Graphics, defect)

x86
Windows XP
defect
Not set
major

Tracking

()

RESOLVED FIXED
mozilla1.9

People

(Reporter: martijn.martijn, Assigned: pavlov)

References

Details

(Keywords: memory-leak, regression, testcase)

Attachments

(2 files)

Attached file testcase
See testcase, after a while (30s or so), Mozilla stops repainting the whole ui. I even had cases where windowsXP showed weird painting issues. Is this some GDI leak or something. This regressed for me between 2008-04-07 and 2008-04-08: http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2008-04-07+04&maxdate=2008-04-08+06&cvsroot=%2Fcvsroot I guess a regression from bug 427084. I also got crashes in the order of [@ UniscribeItem::IsGlyphMissing] with unminimized testcase.
Attached patch leak fixSplinter Review
ugh, don't know how I missed this.
Attachment #314649 - Flags: review?(vladimir)
Flags: blocking1.9?
blocking, and approving.
Flags: blocking1.9? → blocking1.9+
Comment on attachment 314649 [details] [diff] [review] leak fix a1.9+=damons
Attachment #314649 - Flags: approval1.9+
Assignee: nobody → pavlov
Keywords: mlk
Target Milestone: --- → mozilla1.9
Checking in gfx/thebes/src/gfxWindowsFonts.cpp; /cvsroot/mozilla/gfx/thebes/src/gfxWindowsFonts.cpp,v <-- gfxWindowsFonts.cpp new revision: 1.195; previous revision: 1.194 done
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: