Bug 427985 - "Mozilla stops repainting in this testcase after a while" (leak fix) [p=pavlov@pavlov.net (Stuart Parmenter) r=vlad b1.9+a1.9=damons]